@@ -79,7 +79,8 @@ public class FileValidator {
                     version.getSchema(feedName, feedMap).toString(),
                     Optional.ofNullable(feed).map(JSONObject::toString).orElse(null),
                     version.getVersionString(),
-                    validationErrors
+                    validationErrors,
+                    java.util.Collections.emptyList() // Added for systemErrors
             );
         }
 
@@ -93,7 +94,8 @@ public class FileValidator {
                     new FileValidationError(
                         validationException.getSchemaLocation(),
                         validationException.getPointerToViolation(),
-                        validationException.getMessage()
+                        validationException.getMessage(),
+                        validationException.getKeyword()
                 )
             );
         } else {
@@ -119,7 +121,8 @@ public class FileValidator {
                 version.getSchema(file).toString(),
                 null,
                 version.getVersionString(),
-                List.of()
+                List.of(),
+                java.util.Collections.emptyList()
         );
     }
 }
